@@ -4,6 +4,7 @@
 -   Increase components gain from Enemies
 -   New research "Assimilation"; +100% Components from enemies, repeatable
 -   Cargo and Assistance Drone buff
+-   Cargo and Lab info on battle screen
 -   Fixed spells not auto casting
 
 23/08/2020
